--- a/Student/Student/InfoPlist.xcstrings
+++ b/Student/Student/InfoPlist.xcstrings
@@ -3,6 +3,7 @@
   "strings" : {
     "CFBundleDisplayName" : {
       "comment" : "Bundle display name",
+      "extractionState" : "extracted_with_value",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -278,6 +279,7 @@
     },
     "CFBundleSpokenName" : {
       "comment" : "Accessibility Bundle Name",
+      "extractionState" : "extracted_with_value",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
