--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -87,6 +87,12 @@
             "value" : "\"%@\" no es una nota correcta."
           }
         },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "”%@” ei ole kelvollinen arvosana"
+          }
+        },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -339,6 +345,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "%1$@ hasta %2$@"
+          }
+        },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%1$@ - %2$@"
           }
         },
         "fr" : {
@@ -2355,6 +2367,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "< %1$@ a %2$@"
+          }
+        },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "< %1$@ asti %2$@"
           }
         },
         "fr" : {
@@ -12334,6 +12352,12 @@
             "value" : "Comentarios (%lld)"
           }
         },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Kommentit (%lld)"
+          }
+        },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -14625,6 +14649,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Detalles"
+          }
+        },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Lisätiedot"
           }
         },
         "fr" : {
@@ -24363,6 +24393,12 @@
             "value" : "Nota y rúbrica"
           }
         },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Arvosana ja rubriikki"
+          }
+        },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -29824,6 +29860,12 @@
             "value" : "Oculto"
           }
         },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Piilotettu"
+          }
+        },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -30837,6 +30879,12 @@
             "value" : "Nota no válida"
           }
         },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Virheellinen arvosana"
+          }
+        },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -31591,6 +31639,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Sanción por entrega con retraso"
+          }
+        },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Rangaistus myöhästymisestä"
           }
         },
         "fr" : {
@@ -42860,6 +42914,12 @@
             "value" : "Restablecer estado"
           }
         },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Palauta tila "
+          }
+        },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -45161,6 +45221,12 @@
             "value" : "Seleccionar nota"
           }
         },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Valitse arvioija"
+          }
+        },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -47455,6 +47521,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Notas del estudiante"
+          }
+        },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Opiskelijan muistiinpanot"
           }
         },
         "fr" : {
@@ -55393,6 +55465,12 @@
             "value" : "No tenemos más información sobre este estudiante y actividad"
           }
         },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Meillä ei ole lisätietoja tästä opiskelijasta ja tehtävästä."
+          }
+        },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -55635,6 +55713,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Recuento de palabras"
+          }
+        },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Sanamäärä"
           }
         },
         "fr" : {
@@ -55881,6 +55965,12 @@
             "value" : "Escribe el porcentaje aquí"
           }
         },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Kirjoita prosenttiosuus tähän"
+          }
+        },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
@@ -56123,6 +56213,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Escribe la puntuación aquí"
+          }
+        },
+        "fi" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Kirjoita pistemäärä tähän"
           }
         },
         "fr" : {
