--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -62249,7 +62249,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Vous avez des questions à propos de votre tâche?\nEnvoyez un message à votre enseignant(e)."
+            "value" : "Vous avez des questions à propos de votre tâche?\nEnvoyez un message à votre instructeur."
           }
         },
         "ga" : {
@@ -73790,7 +73790,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Envoyer un message à l’enseignant(e)"
+            "value" : "Envoyer un message à l’instructeur"
           }
         },
         "ga" : {
@@ -118521,7 +118521,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Enseignant(e)-assistant"
+            "value" : "Instructeur-assistant"
           }
         },
         "ga" : {
@@ -120872,7 +120872,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Enseignants-assistants"
+            "value" : "Instructeurs-assistants"
           }
         },
         "ga" : {
