Old SpeedGrader Rubrics Clean up

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -769,6 +769,7 @@
       }
     },
     "%g out of %g" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -3046,6 +3047,7 @@
       }
     },
     "Add Comment" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -3302,6 +3304,7 @@
       }
     },
     "Add custom grade" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -13286,6 +13289,7 @@
       }
     },
     "Customize Grade" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -38731,6 +38735,7 @@
       "comment" : "Example: 'out of 10 points'"
     },
     "out_of_g_pts" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -50761,6 +50766,7 @@
       }
     },
     "This criterion will not impact the score." : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -54604,6 +54610,7 @@
       }
     },
     "View Long Description" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
