--- a/Parent/Parent/InfoPlist.xcstrings
+++ b/Parent/Parent/InfoPlist.xcstrings
@@ -386,7 +386,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Joindre des photos et des vidéos aux messages et aux publications de discussion ou les joindre dans les envois de tâche."
+            "value" : "Joindre des photos et des vidéos aux messages et aux publications de discussion ou les joindre dans les envois de travail."
           }
         },
         "ga" : {
@@ -650,7 +650,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Joindre des enregistrements audio aux messages et aux publications de discussion ou les joindre dans les envois de tâche."
+            "value" : "Joindre des enregistrements audio aux messages et aux publications de discussion ou les joindre dans les envois de travail."
           }
         },
         "ga" : {
@@ -914,7 +914,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Joindre des photos et des vidéos aux messages et aux publications de discussion ou les joindre dans les envois de tâche."
+            "value" : "Joindre des photos et des vidéos aux messages et aux publications de discussion ou les joindre dans les envois de travail."
           }
         },
         "ga" : {
@@ -1178,7 +1178,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Joindre des photos et des vidéos aux messages et aux publications de discussion ou les joindre dans les envois de tâche."
+            "value" : "Joindre des photos et des vidéos aux messages et aux publications de discussion ou les joindre dans les envois de travail."
           }
         },
         "ga" : {
