--- a/Student/Student/InfoPlist.xcstrings
+++ b/Student/Student/InfoPlist.xcstrings
@@ -648,7 +648,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Joindre des photos et des vidéos aux messages et aux publications de discussion ou les joindre dans les envois de tâche."
+            "value" : "Joindre des photos et des vidéos aux messages et aux publications de discussion ou les joindre dans les envois de travail."
           }
         },
         "ga" : {
@@ -1176,7 +1176,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Joindre des enregistrements audio aux messages et aux publications de discussion ou les joindre dans les envois de tâche."
+            "value" : "Joindre des enregistrements audio aux messages et aux publications de discussion ou les joindre dans les envois de travail."
           }
         },
         "ga" : {
@@ -1440,7 +1440,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Joindre des photos et des vidéos aux messages et aux publications de discussion ou les joindre dans les envois de tâche."
+            "value" : "Joindre des photos et des vidéos aux messages et aux publications de discussion ou les joindre dans les envois de travail."
           }
         },
         "ga" : {
@@ -1704,7 +1704,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Joindre des photos et des vidéos aux messages et aux publications de discussion ou les joindre dans les envois de tâche."
+            "value" : "Joindre des photos et des vidéos aux messages et aux publications de discussion ou les joindre dans les envois de travail."
           }
         },
         "ga" : {
