--- a/Student/SubmitAssignment/InfoPlist.xcstrings
+++ b/Student/SubmitAssignment/InfoPlist.xcstrings
@@ -110,7 +110,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Envoyer la tâche"
+            "value" : "Envoyer le travail"
           }
         },
         "ga" : {
