--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -129,6 +129,12 @@
             "value" : "\"%@\" bukan nilai yang valid"
           }
         },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "„%@“ er ekki gild einkunn."
+          }
+        },
         "it" : {
           "stringUnit" : {
             "state" : "translated",
@@ -387,6 +393,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "%1$@ kepada %2$@"
+          }
+        },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%1$@ til %2$@"
           }
         },
         "it" : {
@@ -2409,6 +2421,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "< %1$@ ke %2$@"
+          }
+        },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "< %1$@ til %2$@"
           }
         },
         "it" : {
@@ -5450,7 +5468,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Dates de la tâche"
+            "value" : "Dates du travail"
           }
         },
         "ga" : {
@@ -5706,7 +5724,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Détails de la tâche"
+            "value" : "Détails du travail"
           }
         },
         "ga" : {
@@ -12394,6 +12412,12 @@
             "value" : "Komentar (%lld)"
           }
         },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Athugasemdir (%lld)"
+          }
+        },
         "it" : {
           "stringUnit" : {
             "state" : "translated",
@@ -14691,6 +14715,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Detail"
+          }
+        },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Upplýsingar"
           }
         },
         "it" : {
@@ -24408,7 +24438,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Note et rubrique"
+            "value" : "Note et grille de notation"
           }
         },
         "ga" : {
@@ -24433,6 +24463,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Nilai & Rubrik"
+          }
+        },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Einkunn og matskvarði"
           }
         },
         "it" : {
@@ -29619,7 +29655,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Aidez vos élèves à cette tâche par l’ajout d’instructions."
+            "value" : "Aidez vos élèves à ce travail par l’ajout d’instructions."
           }
         },
         "ga" : {
@@ -29900,6 +29936,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Tersembunyi"
+          }
+        },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Falið"
           }
         },
         "it" : {
@@ -30921,6 +30963,12 @@
             "value" : "Nilai Tidak Valid"
           }
         },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ógild einkunn"
+          }
+        },
         "it" : {
           "stringUnit" : {
             "state" : "translated",
@@ -31681,6 +31729,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Penalti Terlambat:"
+          }
+        },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Viðurlög vegna of seinna skila:"
           }
         },
         "it" : {
@@ -42956,6 +43010,12 @@
             "value" : "Atur Ulang Status"
           }
         },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Endurstilla stöðu"
+          }
+        },
         "it" : {
           "stringUnit" : {
             "state" : "translated",
@@ -43435,7 +43495,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Rubrique"
+            "value" : "Grille de notation"
           }
         },
         "ga" : {
@@ -45261,6 +45321,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Pilih Nilai"
+          }
+        },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Velja einkunn"
           }
         },
         "it" : {
@@ -47563,6 +47629,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Catatan Siswa"
+          }
+        },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Athugasemdir nemanda"
           }
         },
         "it" : {
@@ -50349,7 +50421,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Cette tâche ne permet pas d’envoi."
+            "value" : "Ce travail ne permet pas d’envoi."
           }
         },
         "ga" : {
@@ -50605,7 +50677,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Cette tâche permet uniquement des envois sur support papier."
+            "value" : "Ce travail permet uniquement des envois sur support papier."
           }
         },
         "ga" : {
@@ -51117,7 +51189,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Ce groupe n’a pas d’envoi pour cette tâche."
+            "value" : "Ce groupe n’a pas d’envoi pour ce travail."
           }
         },
         "ga" : {
@@ -51373,7 +51445,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Cet étudiant n’a pas d’envoi pour cette tâche."
+            "value" : "Cet étudiant n’a pas d’envoi pour ce travail."
           }
         },
         "ga" : {
@@ -51629,7 +51701,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Les réponses de cet étudiant sont masquées du fait que cette tâche est anonyme."
+            "value" : "Les réponses de cet étudiant sont masquées du fait que ce travail est anonyme."
           }
         },
         "ga" : {
@@ -55507,6 +55579,12 @@
             "value" : "Kami tidak memiliki detail lebih lanjut untuk Siswa dan Tugas ini"
           }
         },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Við höfum ekki frekari upplýsingar um þennan nemanda og verkefni"
+          }
+        },
         "it" : {
           "stringUnit" : {
             "state" : "translated",
@@ -55755,6 +55833,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Jumlah Kata"
+          }
+        },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Orðafjöldi"
           }
         },
         "it" : {
@@ -56007,6 +56091,12 @@
             "value" : "Tuliskan persentase di sini"
           }
         },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Skrifaðu prósentu hér"
+          }
+        },
         "it" : {
           "stringUnit" : {
             "state" : "translated",
@@ -56255,6 +56345,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Tuliskan skor di sini"
+          }
+        },
+        "is" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Skrifaðu einkunn hér"
           }
         },
         "it" : {
