--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -241,7 +241,7 @@
     "Chatham Is. (+12:45/+13:45)" : {
 
     },
-    "Check Answer" : {
+    "Check answer" : {
 
     },
     "Chennai (+05:30)" : {
@@ -783,7 +783,7 @@
     "Regenerate" : {
 
     },
-    "Regenerate Flashcards" : {
+    "Regenerate flashcards" : {
 
     },
     "Rephrase this material" : {
